# llvmCMakeImportDemo

./: CMakeLists.txt  README.md
include/llvmCMakeImportDemo/: Config.h.in  Foo.h
lib/: CMakeLists.txt  Foo.cpp
tools/: CMakeLists.txt
tools/llvm-hello-world/: CMakeLists.txt  main.cpp
